PL2/gramParser.java
// Generated from gramParser.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KEYWORD_ALGORITMO=1, KEYWORD_DEFINIR=2, KEYWORD_COMO=3, KEYWORD_LEER=4, 
		KEYWORD_ESCRIBIR=5, KEYWORD_SI=6, KEYWORD_SINO=7, KEYWORD_ENTONCES=8, 
		KEYWORD_FINSI=9, KEYWORD_PARA=10, KEYWORD_HASTA=11, KEYWORD_HACER=12, 
		KEYWORD_FINPARA=13, KEYWORD_MIENTRAS=14, KEYWORD_FINMIENTRAS=15, KEYWORD_REPETIR=16, 
		KEYWORD_HASTAQUE=17, KEYWORD_SEGUN=18, KEYWORD_DEOTROMODO=19, KEYWORD_FINSEGUN=20, 
		KEYWORD_FINALGORITMO=21, KEYWORD_FUNCION=22, KEYWORD_FINFUNCION=23, VERDADERO=24, 
		FALSO=25, CARACTER=26, ENTERO=27, REAL=28, LOGICO=29, DIMENSION=30, INT=31, 
		FLOAT=32, IDENTIFICADOR=33, PA=34, PC=35, CA=36, CC=37, FIN=38, COMA=39, 
		DOS_PUNTOS=40, ASIGNACION=41, MENOR=42, MAYOR=43, IGUAL=44, SUMA=45, RESTA=46, 
		CADENA_CARACTERES=47, TERMINAL=48, WS=49, COMENTARIOABRIR=50, COMENTARIOLINEA=51, 
		COMENTARIOCERRAR=52, TEXTOCOMENTARIOML=53, FINAL_COMENTARIO_UL=54, TEXTOCOMENTARIOUL=55;
	public static final int
		RULE_prog = 0, RULE_kw_algoritmo = 1, RULE_kw_finalgoritmo = 2, RULE_kw_definir = 3, 
		RULE_kw_como = 4, RULE_kw_leer = 5, RULE_kw_escribir = 6, RULE_kw_si = 7, 
		RULE_kw_sino = 8, RULE_kw_entonces = 9, RULE_kw_finsi = 10, RULE_kw_para = 11, 
		RULE_kw_hasta = 12, RULE_kw_hacer = 13, RULE_kw_finpara = 14, RULE_kw_mientras = 15, 
		RULE_kw_finmientras = 16, RULE_kw_repetir = 17, RULE_kw_hastaque = 18, 
		RULE_kw_segun = 19, RULE_kw_deotromodo = 20, RULE_kw_finsegun = 21, RULE_kw_funcion = 22, 
		RULE_kw_finfuncion = 23, RULE_kw_dimension = 24, RULE_tipo_de_datos = 25, 
		RULE_numero = 26, RULE_identificador = 27, RULE_var = 28, RULE_op_menor = 29, 
		RULE_op_mayor = 30, RULE_op_igual = 31, RULE_op_asignacion = 32, RULE_op_suma = 33, 
		RULE_op_resta = 34, RULE_comparacion = 35, RULE_operador = 36, RULE_condicion_logica = 37, 
		RULE_operacion_logica = 38, RULE_operacion = 39, RULE_fin = 40, RULE_coma = 41, 
		RULE_dos_puntos = 42, RULE_parentesis_izq = 43, RULE_parentesis_der = 44, 
		RULE_corchete_izq = 45, RULE_corchete_der = 46, RULE_signo_puntuacion = 47, 
		RULE_asignacion = 48, RULE_escritura = 49, RULE_lectura = 50, RULE_definicion = 51, 
		RULE_parametros_bucle = 52, RULE_parametros_DF = 53, RULE_parametros_LF = 54, 
		RULE_parametros = 55, RULE_condicion_si = 56, RULE_cabecera_si = 57, RULE_cuerpo_si = 58, 
		RULE_bucle = 59, RULE_bucle_mientras = 60, RULE_cabecera_mientras = 61, 
		RULE_cuerpo_mientras = 62, RULE_bucle_para = 63, RULE_cabecera_para = 64, 
		RULE_cuerpo_para = 65, RULE_bucle_repetir = 66, RULE_cabecera_repetir = 67, 
		RULE_cuerpo_repetir = 68, RULE_condicion_repetir = 69, RULE_segun = 70, 
		RULE_cabecera_segun = 71, RULE_tipo_segun = 72, RULE_tipo_deotromodo = 73, 
		RULE_cuerpo_segun = 74, RULE_dimension = 75, RULE_algoritmo = 76, RULE_cabecera_algoritmo = 77, 
		RULE_nombre_algoritmo = 78, RULE_cuerpo_algoritmo = 79, RULE_funcion = 80, 
		RULE_cabecera_funcion = 81, RULE_cuerpo_funcion = 82, RULE_llamada_funcion = 83, 
		RULE_textos = 84, RULE_comentario = 85;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "kw_algoritmo", "kw_finalgoritmo", "kw_definir", "kw_como", "kw_leer", 
			"kw_escribir", "kw_si", "kw_sino", "kw_entonces", "kw_finsi", "kw_para", 
			"kw_hasta", "kw_hacer", "kw_finpara", "kw_mientras", "kw_finmientras", 
			"kw_repetir", "kw_hastaque", "kw_segun", "kw_deotromodo", "kw_finsegun", 
			"kw_funcion", "kw_finfuncion", "kw_dimension", "tipo_de_datos", "numero", 
			"identificador", "var", "op_menor", "op_mayor", "op_igual", "op_asignacion", 
			"op_suma", "op_resta", "comparacion", "operador", "condicion_logica", 
			"operacion_logica", "operacion", "fin", "coma", "dos_puntos", "parentesis_izq", 
			"parentesis_der", "corchete_izq", "corchete_der", "signo_puntuacion", 
			"asignacion", "escritura", "lectura", "definicion", "parametros_bucle", 
			"parametros_DF", "parametros_LF", "parametros", "condicion_si", "cabecera_si", 
			"cuerpo_si", "bucle", "bucle_mientras", "cabecera_mientras", "cuerpo_mientras", 
			"bucle_para", "cabecera_para", "cuerpo_para", "bucle_repetir", "cabecera_repetir", 
			"cuerpo_repetir", "condicion_repetir", "segun", "cabecera_segun", "tipo_segun", 
			"tipo_deotromodo", "cuerpo_segun", "dimension", "algoritmo", "cabecera_algoritmo", 
			"nombre_algoritmo", "cuerpo_algoritmo", "funcion", "cabecera_funcion", 
			"cuerpo_funcion", "llamada_funcion", "textos", "comentario"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Algoritmo'", null, "'Como'", "'Leer'", "'Escribir'", "'Si'", 
			"'SiNo'", "'Entonces'", "'FinSi'", "'Para'", "'Hasta'", "'Hacer'", "'FinPara'", 
			"'Mientras'", "'FinMientras'", "'Repetir'", "'Hasta Que'", "'Segun'", 
			"'De Otro Modo'", "'FinSegun'", "'FinAlgoritmo'", "'Funcion'", "'FinFuncion'", 
			"'Verdadero'", "'Falso'", "'Caracter'", "'Entero'", "'Real'", "'Logico'", 
			"'Dimension'", null, null, null, "'('", "')'", "'['", "']'", "';'", "','", 
			"':'", "'<-'", "'<'", "'>'", "'='", "'+'", "'-'", null, null, null, "'/**'", 
			"'//'", "'**/'", null, "'\r\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KEYWORD_ALGORITMO", "KEYWORD_DEFINIR", "KEYWORD_COMO", "KEYWORD_LEER", 
			"KEYWORD_ESCRIBIR", "KEYWORD_SI", "KEYWORD_SINO", "KEYWORD_ENTONCES", 
			"KEYWORD_FINSI", "KEYWORD_PARA", "KEYWORD_HASTA", "KEYWORD_HACER", "KEYWORD_FINPARA", 
			"KEYWORD_MIENTRAS", "KEYWORD_FINMIENTRAS", "KEYWORD_REPETIR", "KEYWORD_HASTAQUE", 
			"KEYWORD_SEGUN", "KEYWORD_DEOTROMODO", "KEYWORD_FINSEGUN", "KEYWORD_FINALGORITMO", 
			"KEYWORD_FUNCION", "KEYWORD_FINFUNCION", "VERDADERO", "FALSO", "CARACTER", 
			"ENTERO", "REAL", "LOGICO", "DIMENSION", "INT", "FLOAT", "IDENTIFICADOR", 
			"PA", "PC", "CA", "CC", "FIN", "COMA", "DOS_PUNTOS", "ASIGNACION", "MENOR", 
			"MAYOR", "IGUAL", "SUMA", "RESTA", "CADENA_CARACTERES", "TERMINAL", "WS", 
			"COMENTARIOABRIR", "COMENTARIOLINEA", "COMENTARIOCERRAR", "TEXTOCOMENTARIOML", 
			"FINAL_COMENTARIO_UL", "TEXTOCOMENTARIOUL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> TERMINAL() { return getTokens(gramParser.TERMINAL); }
		public TerminalNode TERMINAL(int i) {
			return getToken(gramParser.TERMINAL, i);
		}
		public List<AlgoritmoContext> algoritmo() {
			return getRuleContexts(AlgoritmoContext.class);
		}
		public AlgoritmoContext algoritmo(int i) {
			return getRuleContext(AlgoritmoContext.class,i);
		}
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYWORD_ALGORITMO) | (1L << KEYWORD_FUNCION) | (1L << COMENTARIOABRIR) | (1L << COMENTARIOLINEA))) != 0)) {
				{
				{
				setState(175);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case KEYWORD_ALGORITMO:
					{
					setState(172);
					algoritmo();
					}
					break;
				case KEYWORD_FUNCION:
					{
					setState(173);
					funcion();
					}
					break;
				case COMENTARIOABRIR:
				case COMENTARIOLINEA:
					{
					setState(174);
					comentario();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(177);
				match(TERMINAL);
				}
				}
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Kw_algoritmoContext extends ParserRuleContext {
		public TerminalNode KEYWORD_ALGORITMO() { return getToken(gramParser.KEYWORD_ALGORITMO, 0); }
		public Kw_algoritmoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kw_algoritmo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).enterKw_algoritmo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).exitKw_algoritmo(this);
		}
	}

	public final Kw_algoritmoContext kw_algoritmo() throws RecognitionException {
		Kw_algoritmoContext _localctx = new Kw_algoritmoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_kw_algoritmo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(KEYWORD_ALGORITMO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Kw_finalgoritmoContext extends ParserRuleContext {
		public TerminalNode KEYWORD_FINALGORITMO() { return getToken(gramParser.KEYWORD_FINALGORITMO, 0); }
		public Kw_finalgoritmoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kw_finalgoritmo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).enterKw_finalgoritmo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).exitKw_finalgoritmo(this);
		}
	}

	public final Kw_finalgoritmoContext kw_finalgoritmo() throws RecognitionException {
		Kw_finalgoritmoContext _localctx = new Kw_finalgoritmoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_kw_finalgoritmo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			match(KEYWORD_FINALGORITMO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Kw_definirContext extends ParserRuleContext {
		public TerminalNode KEYWORD_DEFINIR() { return getToken(gramParser.KEYWORD_DEFINIR, 0); }
		public Kw_definirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kw_definir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).enterKw_definir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).exitKw_definir(this);
		}
	}

	public final Kw_definirContext kw_definir() throws RecognitionException {
		Kw_definirContext _localctx = new Kw_definirContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_kw_definir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			match(KEYWORD_DEFINIR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Kw_comoContext extends ParserRuleContext {
		public TerminalNode KEYWORD_COMO() { return getToken(gramParser.KEYWORD_COMO, 0); }
		public Kw_comoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kw_como; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).enterKw_como(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).exitKw_como(this);
		}
	}

	public final Kw_comoContext kw_como() throws RecognitionException {
		Kw_comoContext _localctx = new Kw_comoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_kw_como);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			match(KEYWORD_COMO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Kw_leerContext extends ParserRuleContext {
		public TerminalNode KEYWORD_LEER() { return getToken(gramParser.KEYWORD_LEER, 0); }
		public Kw_leerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kw_leer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).enterKw_leer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).exitKw_leer(this);
		}
	}

	public final Kw_leerContext kw_leer() throws RecognitionException {
		Kw_leerContext _localctx = new Kw_leerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_kw_leer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(KEYWORD_LEER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Kw_escribirContext extends ParserRuleContext {
		public TerminalNode KEYWORD_ESCRIBIR() { return getToken(gramParser.KEYWORD_ESCRIBIR, 0); }
		public Kw_escribirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kw_escribir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).enterKw_escribir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).exitKw_escribir(this);
		}
	}

	public final Kw_escribirContext kw_escribir() throws RecognitionException {
		Kw_escribirContext _localctx = new Kw_escribirContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_kw_escribir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(KEYWORD_ESCRIBIR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Kw_siContext extends ParserRuleContext {
		public TerminalNode KEYWORD_SI() { return getToken(gramParser.KEYWORD_SI, 0); }
		public Kw_siContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kw_si; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).enterKw_si(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).exitKw_si(this);
		}
	}

	public final Kw_siContext kw_si() throws RecognitionException {
		Kw_siContext _localctx = new Kw_siContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_kw_si);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			match(KEYWORD_SI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Kw_sinoContext extends ParserRuleContext {
		public TerminalNode KEYWORD_SINO() { return getToken(gramParser.KEYWORD_SINO, 0); }
		public Kw_sinoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kw_sino; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).enterKw_sino(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).exitKw_sino(this);
		}
	}

	public final Kw_sinoContext kw_sino() throws RecognitionException {
		Kw_sinoContext _localctx = new Kw_sinoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_kw_sino);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			match(KEYWORD_SINO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Kw_entoncesContext extends ParserRuleContext {
		public TerminalNode KEYWORD_ENTONCES() { return getToken(gramParser.KEYWORD_ENTONCES, 0); }
		public Kw_entoncesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kw_entonces; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).enterKw_entonces(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).exitKw_entonces(this);
		}
	}

	public final Kw_entoncesContext kw_entonces() throws RecognitionException {
		Kw_entoncesContext _localctx = new Kw_entoncesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_kw_entonces);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200);
			match(KEYWORD_ENTONCES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Kw_finsiContext extends ParserRuleContext {
		public TerminalNode KEYWORD_FINSI() { return getToken(gramParser.KEYWORD_FINSI, 0); }
		public Kw_finsiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kw_finsi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).enterKw_finsi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).exitKw_finsi(this);
		}
	}

	public final Kw_finsiContext kw_finsi() throws RecognitionException {
		Kw_finsiContext _localctx = new Kw_finsiContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_kw_finsi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			match(KEYWORD_FINSI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Kw_paraContext extends ParserRuleContext {
		public TerminalNode KEYWORD_PARA() { return getToken(gramParser.KEYWORD_PARA, 0); }
		public Kw_paraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kw_para; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).enterKw_para(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).exitKw_para(this);
		}
	}

	public final Kw_paraContext kw_para() throws RecognitionException {
		Kw_paraContext _localctx = new Kw_paraContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_kw_para);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			match(KEYWORD_PARA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Kw_hastaContext extends ParserRuleContext {
		public TerminalNode KEYWORD_HASTA() { return getToken(gramParser.KEYWORD_HASTA, 0); }
		public Kw_hastaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kw_hasta; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).enterKw_hasta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramParserListener ) ((gramParserListener)listener).exitKw_hasta(this);
		}
	}

	public final Kw_hastaContext kw_hasta() throws RecognitionException {
		Kw_hastaContext _localctx = new Kw_hastaContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_kw_hasta);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			match(KEYWORD_HASTA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

